[tool.poetry]
name = "test"
version = "0.1.0"
description = "First experience with poetry"
authors = ["Fabio Gianzanti <pardal@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
mujoco = "^3.1.3"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
stable-baselines3 = {extras = ["extra"], version = "^2.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
